Convert ConnectionString to a record